--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Code/__pycache__/read_file.cpython-39.pyc
 Code/__pycache__/read_file.cpython-311.pyc
 Code/__pycache__/utils.cpython-39.pyc
 Code/__pycache__/utils.cpython-311.pyc
+Code/.ipynb_checkpoints/experience-checkpoint.ipynb
