--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ Code/__pycache__/indicators.cpython-311.pyc
 Code/__pycache__/read_file.cpython-39.pyc
 Code/__pycache__/read_file.cpython-311.pyc
 Code/__pycache__/utils.cpython-39.pyc
-Code/__pycache__/utils.cpython-311.pyc
-Code/.ipynb_checkpoints/experience-checkpoint.ipynb
+Code/__pycache__/*
+Code/.ipynb_checkpoints/*
